# ORDerly

./: .gitignore  .test_durations  AUTHORS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO  USPTO_cleaning.py  USPTO_extraction.py  explore.py  fix_solvents_csv.ipynb  inspect_clean_data.ipynb  inspections.ipynb  paper.bib  paper.md  pyproject.toml  rxn_inspection.ipynb  rxn_inspection.py  setup.py  test.ipynb  tester.py
.github/workflows/: code_format.yml  draft-pdf.yml  mypy.yml  mypy_strict.yml  pytest.yml  pytest_linux.yml  pytest_mac.yml  pytest_windows.yml  test_download.yml
ORDerly/: __init__.py
ORDerly/cleaning/: __main__.py  cleaner.py
ORDerly/extraction/: USPTO_extraction.py
condition_prediction/: README.md  __main__.py  pyproject.toml  run.py
condition_prediction/condition_prediction/: __main__.py  constants.py  data_generator.py  model.py  run.py  utils.py
condition_prediction/condition_prediction/learn/: ohe.py
condition_prediction/condition_prediction/reactions/: fingerprint.py
condition_prediction/learn/: metrics.py  util.py
condition_prediction/sweep/: __main__.py  halton.py  sweep.py
condition_prediction/tests/: test_condition_predictor.py
conf/: no_trust_no_map_train.yaml
data/: solvents.csv
notebooks/: ORDerly_args_decisions.ipynb  clean_wandb.ipynb  dataset_freq.ipynb  dataset_intersections.ipynb  fast_test_train_intersection.ipynb  fix_solvents_csv.py  fix_test.ipynb  fixing_trust_true.ipynb  inspect_clean_data.py  inspect_final_data.ipynb  inspect_model.ipynb  inspect_ord.ipynb  inspect_orderly_data.ipynb  inspecting_TDC.ipynb  inspections.py  intersection_dataset.ipynb  mol_transformer_eval.ipynb  mol_transformer_support.ipynb  orderly_benchmark_stats.ipynb  plot_model_performance.ipynb  plot_model_performance_wandb.ipynb  retrosynth_data_gen.ipynb  rxn_class.ipynb  update_wandb_runs.py
orderly/: __init__.py  test.ipynb  types.py
orderly/clean/: __main__.py  cleaner.py
orderly/cleaning/: __main__.py  cleaner.py
orderly/condition_prediction/: model.py  placeholder.py  run.py
orderly/condition_prediction/learn/: fit.py  model.py
orderly/condition_prediction/reactions/: filters.py  fingerprint.py  generate.py  get.py
orderly/data/: __init__.py  pura_solvents.csv  solvents.csv  solvents.py  solvents_check_agreement.csv  subset_1.csv  subset_2.csv  subset_2_.csv  test_data.py  util.py
orderly/data/extracted_ord_test_data/: all_molecule_names.pkl
orderly/data/extracted_ord_test_data/molecule_names/: molecules_uspto-grants-1978_12.pkl  molecules_uspto-grants-1979_09.pkl  molecules_uspto-grants-1980_08.pkl  molecules_uspto-grants-1982_08.pkl  molecules_uspto-grants-1986_09.pkl  molecules_uspto-grants-1995_11.pkl
orderly/data/extracted_ord_test_data/pickled_data/: 750_astrazeneca_eln_dataset.pkl  ord_dataset-0c75d67751634f0594b24b9f498b77c2.pkl  ord_dataset-cbcc4048add7468e850b6ec42549c70d.pkl  synthesis_of_islatravir_by_biocatalytic_cascade.pkl  uspto-grants-1978_12.pkl  uspto-grants-1979_09.pkl  uspto-grants-1980_08.pkl  uspto-grants-1982_08.pkl  uspto-grants-1986_09.pkl  uspto-grants-1995_11.pkl
orderly/data/extracted_ord_test_data_dont_trust_labelling/: all_molecule_names.csv  all_molecule_names.pkl
orderly/data/extracted_ord_test_data_dont_trust_labelling/extracted_ords/: 750_astrazeneca_eln_dataset.parquet  ord_dataset-0c75d67751634f0594b24b9f498b77c2.parquet  ord_dataset-cbcc4048add7468e850b6ec42549c70d.parquet  uspto-grants-1978_12.parquet  uspto-grants-1979_09.parquet  uspto-grants-1980_08.parquet  uspto-grants-1982_08.parquet  uspto-grants-1986_09.parquet  uspto-grants-1995_11.parquet
orderly/data/extracted_ord_test_data_dont_trust_labelling/molecule_names/: molecules_uspto-grants-1978_12.pkl  molecules_uspto-grants-1979_09.pkl  molecules_uspto-grants-1980_08.pkl  molecules_uspto-grants-1982_08.csv  molecules_uspto-grants-1982_08.pkl  molecules_uspto-grants-1986_09.csv  molecules_uspto-grants-1986_09.pkl  molecules_uspto-grants-1995_11.pkl
orderly/data/extracted_ord_test_data_dont_trust_labelling/pickled_data/: 750_astrazeneca_eln_dataset.parquet  750_astrazeneca_eln_dataset.pkl  ord_dataset-0c75d67751634f0594b24b9f498b77c2.pkl  ord_dataset-cbcc4048add7468e850b6ec42549c70d.parquet  (+15 more)
orderly/data/extracted_ord_test_data_trust_labelling/: all_molecule_names.csv  all_molecule_names.pkl
orderly/download/: __main__.py  benchmark.py  ord.py
orderly/download/benchmark/: __main__.py  main.py
orderly/download/ord/: __main__.py  main.py
orderly/extract/: __main__.py  canonicalise.py  defaults.py  extractor.py  main.py  test.ipynb
orderly/extraction/: USPTO_extraction.py  __main__.py  defaults.py  extractor.py  main.py
orderly/gen_fp/: __main__.py  fingerprints.py
orderly/plot/: __main__.py  plotter.py
paper/: paper.bib  paper.md
sweeps/: no_trust_no_map_train.yaml  no_trust_no_map_train_commands.txt  no_trust_with_map_train.yaml  no_trust_with_map_train_commands.txt  with_trust_no_map_train.yaml  with_trust_no_map_train_commands.txt  with_trust_with_map.yaml  with_trust_with_map_train.yaml  with_trust_with_map_train_commands.txt
tests/: test_clean.py  test_data.py  test_extract.py
uspto_cleaning/: USPTO_cleaning.py  USPTO_extraction.py  __init__.py  defaults.py  main.py
(+87 files in other folders)
