[tool.poetry]
name = "orderly"
version = "0.0.3"
description = ""
authors = ["joearrowsmith <joearrowsmith98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2022.9.5"
ord-schema = "^0.3.44"
click = "^8.1.3"
tqdm = "^4.65.0"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
