[tool.poetry]
name = "ORDerly"
version = "1.0.0"
description = "Extraction and cleaning of chemical reactions data from ORD"
authors = [
    "Daniel S. Wigh <dsw46@cam.ac.uk>",
    "Joe Arrowsmith <joearrowsmith0@gmail.com>",
    "Alexander Pomberger <ap2153@cam.ac.uk>",
    "Kobi C. Felton <kcmf2@cam.ac.uk>",
    "Alexei A. Lapkin <aal35@cam.ac.uk>",
]
maintainers = [
    "Daniel S. Wigh <dsw46@cam.ac.uk>",
    "Joe Arrowsmith <joearrowsmith0@gmail.com>",
]
# New attributes
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sustainable-processes/ORDerly"
repository = "https://github.com/sustainable-processes/ORDerly"
keywords = ["ord-schema", "RDKit", "ord-data", "chemical-reactions"]

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2022.9.5"
ord-schema = "^0.3.44"
click = "^8.1.3"
tqdm = "^4.65.0"
joblib = "^1.2.0"
fastparquet = "^2023.2.0"
psutil = "^5.9.4"
types-requests = "^2.31.0.1"
pyarrow = "^12.0.0"
numpy = "<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest-split = "^0.8.1"
pytest = "^7.2.2"
black = "^23.3.0"
mypy = "^1.2.0"
ipykernel = "^6.22.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
