[tool.poetry]
name = "condition_prediction"
version = "0.1.0"
description = ""
authors = [
    "joearrowsmith <joearrowsmith98@gmail.com>",
    "Kobi Felton <kobi.c.f@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = { version = "^2.12.0", platform = "linux" }
tensorflow-macos = { version = "^2.12.0", platform = "darwin" }
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
click = "^8.1.3"
click-loglevel = "^0.4.0"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"
pyarrow = "^10.0.1"
Counter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
